--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,6 +15,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/font
 body {
     padding-top: 20px;
     padding-bottom: 20px;
+    background: pink;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
