Add Yale color variables, replace values for modular variables, replace px values with rem, add accessibility bar, aside menu, used box-shadow to create header styles in sidebar.

--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -1,4 +1,3 @@
-$grey-dark: #383838;
-
-$brand-primary: #6698c8;                                                                                                         
-$brand-primary-dark: #1b3768;
+$brand-primary:         #6698c8 !default;
+$brand-primary-dark: 	#1b3768 !default;
+$brand-primary-light:	#c2d6e9 !default;
