--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,7 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/fonts/bootstrap/";
 
+@import 'colors';
+
 // bower:scss
 @import "../bower_components/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.scss";
 // endbower
@@ -8,15 +10,16 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/font
 /* === Grid === */
 @import 'breakpoints';
 @import 'grid'; 
-@import 'colors';
 @import 'fontsize';
+
+
 
 body             { background: white; }
 .container, 
 .container-fluid { max-width: 1128px; }
 
 footer{
-    background: $grey-dark;
+    background: $gray-dark;
     color: white;
 }
 
@@ -62,10 +65,18 @@ img           { width: 100%; max-width: auto; height: auto; }
 $defaultSpeed: .5s;
 $defaultEase: ease-in-out;
 a, a:hover{
-    color: #000;
     text-decoration: none;
-    .content &{
+    .content-body &{
         text-decoration: underline;
+    }
+    &.external{
+        &:after{
+            font-family: fontawesome;
+            content: "\f08e";
+            display: inline-block;
+            position: relative;
+            margin-left: 5px;
+        }
     }
 }
 
@@ -76,7 +87,8 @@ Header
 /*==========  Topper  ==========*/
 nav.topper{
     vertical-align: middle;    
-    background: #c2d6e9;
+    background: $brand-primary-light;
+
     a{
         display: inline-block;
         padding: 17px;
@@ -91,7 +103,7 @@ nav.topper{
 #header-search-expand{
     display: inline-block;
     .search-field-container{
-        display:none;
+        display: none;
     }    
 }
 
@@ -100,7 +112,7 @@ nav.topper{
 /*==========  Primary Nav  ==========*/
 
 nav.primary{
-    border-bottom: 4px solid #ebebeb;
+    border-bottom: 4px solid $gray-lighter;
     
     & > ul{ 
         list-style: none;
@@ -109,14 +121,15 @@ nav.primary{
             $primaryNavItemWidth: 145px;
             width: $primaryNavItemWidth;
             display: inline-block;
-            
+            vertical-align: top;
             a{
                 display: inline-block;
                 width: $primaryNavItemWidth;
+                padding: 30px 0;
                 &:before{
                     content: "";
                     display: inline-block;
-                    border-left: 1px solid #ebebeb;
+                    border-left: 1px solid $gray-lighter;
                 }
             }    
         }
@@ -131,9 +144,7 @@ nav.primary{
     background: $brand-primary-dark;
     color: white;
     padding: 2.5rem 0;
-    h1{
-        margin: 0;
-    }
+    h1{ margin: 0; }
 }
 
 /*-----  End of Header  ------*/
@@ -160,40 +171,67 @@ aside{
 
 
 /*===============================
-=            Article            =
+=            Main            =
 ===============================*/
     
 .accessibility-bar{
     overflow: hidden;
-    border-bottom: 1px solid #7f7f7f;
+    border-bottom: 1px solid $gray-light;
     & > ul{
         display: flex;
         list-style: none;
         padding: 0 0 12px;
+        margin: 0;
         li{
             a{
                 display: inline-block;
                 padding: 0 10px;
-                color: #7f7f7f;
+                color: lighten($gray, 10%);
             }            
         }
     }
 }
-.article-body{
+main.container-fluid{
+    padding: 3.125rem 0 95px;
+}
+.content-body{
     clear: both;
-
     ul{
         padding-left: 0.9375rem;
         margin-left: 0.9375rem;
     }
 
     h3{
+        margin: 2.5rem 0 1.875rem;
         @include font-size(4);
     }
 }
 
-/*-----  End of Article  ------*/
+/*-----  End of Main  ------*/
 
     
+/*===============================
+=            Modules            =
+===============================*/
+
+.module-primary{
+    border: 1px solid lighten($gray-light,20%);
+    margin-bottom: 1.5rem;
+    ul{
+        padding: 1.875rem 2.8125rem;
+    }
+    header{
+        background: $brand-primary;
+        color: white;
+        padding: 1.0625rem 2.8125rem;
+        box-shadow: 0 0 0px 1px $brand-primary;
+
+        h4{ margin: 0; }
+        a{ color: white; }
+    }
+}
+
+/*-----  End of Modules  ------*/
+
 
 
