Add primary, primary-dark, primary-light, and secondary color variables in separate partial.

--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -1,3 +1,5 @@
 $brand-primary:         #6698c8 !default;
 $brand-primary-dark: 	#1b3768 !default;
 $brand-primary-light:	#c2d6e9 !default;
+
+$brand-secondary:		#dfaf25 !default;
