--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,9 +12,32 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/font
 @import 'grid'; 
 @import 'fontsize';
 
+/* === Variables === */
+$defaultSpeed: .5s;
+$defaultEase: ease-in-out;
+a, a:hover{
+    text-decoration: none;
+    .content-body &{
+        text-decoration: underline;
+    }
+    &.external{
+        &:after{
+            font-family: fontawesome;
+            content: "\f08e";
+            display: inline-block;
+            position: relative;
+            margin-left: 5px;
+        }
+    }
+}
+// Typography
+$more-pro: "ff-more-web-pro";
+$proxima: "proxima-nova";
+$proxima-condensed: "proxima-nova-condensed";
 
 
-body             { background: white; font-family: "More Pro"}
+
+body             { background: white; font-family: $proxima}
 .container, 
 .container-fluid { max-width: 1128px; }
 
@@ -23,7 +46,6 @@ body             { background: white; font-family: "More Pro"}
 
 /* === Helpers === */
 *             { transition: all .1s ease; }
-body          { font-weight: 400; font-family: "PT Sans";}
 img           { width: 100%; max-width: auto; height: auto; }
 .upcase       { text-transform: uppercase; }
 .inline-block { display:inline-block; }
@@ -63,28 +85,6 @@ img           { width: 100%; max-width: auto; height: auto; }
         border-top-color: white;
         border-width: $arrowsize + 1;
         margin-left: -($arrowsize + 1);
-    }
-}
-
-
-
-
-/* === Variables === */
-$defaultSpeed: .5s;
-$defaultEase: ease-in-out;
-a, a:hover{
-    text-decoration: none;
-    .content-body &{
-        text-decoration: underline;
-    }
-    &.external{
-        &:after{
-            font-family: fontawesome;
-            content: "\f08e";
-            display: inline-block;
-            position: relative;
-            margin-left: 5px;
-        }
     }
 }
 
@@ -243,7 +243,12 @@ nav.topper{
     background: $brand-primary-dark;
     color: white;
     padding: 2.5rem 0;
-    h1{ margin: 0; }
+    .title-section{ //h1
+        font-family: $more-pro;
+        font-weight: normal;
+        font-size: 2.375em;
+        margin: 0; 
+    }
 }
 
 /*-----  End of Header  ------*/
@@ -316,13 +321,17 @@ main.container-fluid{
     padding: 3.125rem 15px 95px;
 }
 .content-body{
+    p{
+        font-family: $more-pro;
+        line-height: 1.6;
+     }
     ul{
         padding-left: 0.9375rem;
         margin-left: 0.9375rem;
     }
 
     h3{
-        margin: 3.5rem 0 1.575rem;
+        margin: 3.5rem 0 2rem;
         @include font-size(4);
     }
 }
@@ -338,14 +347,18 @@ main.container-fluid{
     box-shadow: 0 2px 5px 0 rgba(0,0,0,.05);
     margin-bottom: 1.5rem;
     vertical-align: middle;
+    .fa-stack{
+        .fa + .fa{
+            position: relative;
+        }
+    }
     ul{
         padding: 0;
 
         & > li{
             a{
-                margin: 7px 7px 0 7px;
                 display: block;
-                padding: 15px 40px;
+                // padding: 15px 40px;
                 &:hover{
                     background: none;
                 }
@@ -354,22 +367,32 @@ main.container-fluid{
     }
     & > h4{
         margin: 0;
-        padding: 1.875rem 4.8125rem 1.25rem;
+        //padding: 30px 4.8125rem;
         text-transform: uppercase;
         @include font-size(1.4);
     }
     .input-group{
-        padding: 30px 2.8125rem;
+        //padding: 30px 4.8125rem;
     }
     &.module-related-links{
-        padding: 30px 4.8125rem;
+        //padding: 30px 4.8125rem;
         h4, 
-        ul > li a{
-            padding: 0;
+        ul > li {
             margin: 0 0 20px;
-        }
-        ul > li:last-child a{
-            margin-bottom: 0;
+            a{
+                //padding: 0 35px 0 0;
+                display: inline;
+                position: relative;
+                &.external{
+                    &:after{
+                        position: absolute;
+                        right:0;
+                    }
+                }
+            }
+            &:last-child{
+                margin-bottom:0
+            }
         }
     }
 
@@ -387,7 +410,7 @@ main.container-fluid{
         color: white;
         margin: 0 0 .75%;
         box-shadow: 0 0 0 1px $brand-primary;
-        padding: 15px 50px;
+        padding: 0.938em 3.125em;
         
         &:hover{
             background: darken($brand-primary,5%);
@@ -411,7 +434,7 @@ main.container-fluid{
 
     a{
         display: block;
-        padding: 15px 50px;
+        padding: 0.938em 3.125em;;
         color: $brand-secondary;
         &:visited{
             color: darken($brand-secondary, 10%);
@@ -420,6 +443,31 @@ main.container-fluid{
 }
 
 /*-----  End of Modules  ------*/
+
+/*===============================
+=            Figures            =
+===============================*/
+
+figure{
+    max-width: 360px;
+    &:nth-child(odd){
+        float: left;
+        margin: 0 20px 20px 0;
+    }
+    &:nth-child(even){
+        float: right;
+        margin: 0 0 20px 20px;
+    }
+    figcaption{
+        margin: 5px 0 0 0;
+        font: normal 400 .875em/1.3 $proxima;
+    }
+}
+
+
+/*-----  End of Figures  ------*/
+
+
 
 
 /*==============================
@@ -431,8 +479,57 @@ footer{
     color: white;
     padding: 45px 70px;
     
-    .ysm-shield-container{
+    .footer-logo-container{
         width:90px;
+        .footer-logo{
+            margin-bottom:25px;
+        }
+        .footer-logo-copy{
+            color: $gray-light;
+            text-transform: uppercase;
+            font-family: $proxima;
+            font-size: .750em;
+            font: normal 400 .750em/1em $proxima;
+        }
+    }
+    .footer-address{
+        font-family: $more-pro, serif;
+
+        strong{
+            // font: 500 normal 18px/1 $more-pro;
+            font-size: 1.125em;
+            font-weight: 500;
+            font-family: $more-pro;
+        }
+    }
+    .footer-links{
+        // column-count: 2;
+        // column-gap: 20px;
+        text-transform: uppercase;
+        font: 400 normal 14px/1 $proxima-condensed;
+        a{
+            display: block;
+            color: white;
+            margin-bottom: 15px;
+            &:hover{
+                color: darken(white, 10%);
+            }
+            &.external{
+                color: $brand-primary;
+                &:hover{
+                    color: lighten($brand-primary, 10%);
+                }
+            }
+        }
+    }
+    .footer-wordmark{
+        .footer-wordmark-image{
+            width: 260px;
+            margin-bottom: 12px; 
+        }
+        .footer-copyright{
+            font: 400 10px/1 $proxima;
+        }
     }
 }
 
